fix: page-area spacing

--- a/css/style.css
+++ b/css/style.css
@@ -237,10 +237,14 @@ input:focus {
   background-color: #f7f7f5;
 }
 
-.blog-area,
-.page-area {
+.blog-area {
   padding-top: 140px;
   padding-bottom: 140px;
+}
+
+.page-area {
+  padding-top: 130px;
+  padding-bottom: 116px;
 }
 
 @media (max-width: 1199px) {
