--- a/sass/partials/_theme-default.scss
+++ b/sass/partials/_theme-default.scss
@@ -170,11 +170,15 @@ input:focus {
 //   padding-top: 136px;
 //   padding-bottom: 124px;
 // }
-.blog-area,
-.page-area {
+.blog-area{
   padding-top: 140px;
   padding-bottom: 140px;
 }
+.page-area {
+  padding-top: 130px;
+  padding-bottom: 116px;
+}
+
 // .page-area,
 .blog-area,
 .page-area {
